only use secrets on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 language: go
 
-before_install:
-  - openssl aes-256-cbc -K $encrypted_eca6ec4b024e_key -iv $encrypted_eca6ec4b024e_iv
-    -in appengine.json.enc -out appengine.json
-    -d
-
-
 after_success:
-  - sed -i 's/$TOKEN/'$SLACK_TOKEN'/g' app.yaml
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then 
+    openssl aes-256-cbc -K $encrypted_eca6ec4b024e_key -iv $encrypted_eca6ec4b024e_iv -in appengine.json.enc -out appengine.json -d;
+    sed -i 's/$TOKEN/'$SLACK_TOKEN'/g' app.yaml;
+  fi
 
 deploy:
   provider: gae
