--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://staging.womenwhogo.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Women Who Go"
 theme = "airspace-hugo"
