Fix PR deploys URLs

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,13 +15,13 @@ HUGO_VERSION = "0.51"
 HUGO_ENV = "production"
 
 [context.deploy-preview]
-command = "hugo --buildFuture -b $DEPLOY_PRIME_URL"
+command = "hugo --buildFuture -b $DEPLOY_PRIME_URL/"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.51"
 
 [context.branch-deploy]
-command = "hugo -b $DEPLOY_PRIME_URL"
+command = "hugo -b $DEPLOY_PRIME_URL/"
 
 [context.branch-deploy.environment]
 HUGO_VERSION = "0.51"
