--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_eca6ec4b024e_key
     -iv $encrypted_eca6ec4b024e_iv -in appengine.json.enc -out appengine.json -d; sed
     -i 's/$TOKEN/'$SLACK_TOKEN'/g' app.yaml; fi
-  - gcloud app domain-mappings delete womenwhogo.org
-  - gcloud app domain-mappings delete www.womenwhogo.org
+  - gcloud app domain-mappings delete womenwhogo.org --quiet
+  - gcloud app domain-mappings delete www.womenwhogo.org --quiet
 deploy:
   provider: gae
   keyfile: appengine.json
