--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: go
 go: "1.19.x"
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_eca6ec4b024e_key
+  - if [ "$TRAVIS_BRANCH" == "rm-site" ]; then openssl aes-256-cbc -K $encrypted_eca6ec4b024e_key
     -iv $encrypted_eca6ec4b024e_iv -in appengine.json.enc -out appengine.json -d; sed
     -i 's/$TOKEN/'$SLACK_TOKEN'/g' app.yaml; fi
+  # load access token into gcloud
+  - gcloud auth activate-service-account --key-file appengine.json
   - gcloud app domain-mappings delete womenwhogo.org --quiet
   - gcloud app domain-mappings delete www.womenwhogo.org --quiet
 deploy:
