--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: go
-go: '1.13.x'
+go: 1.13.x
 after_success:
-- if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_eca6ec4b024e_key
-  -iv $encrypted_eca6ec4b024e_iv -in appengine.json.enc -out appengine.json -d; sed
-  -i 's/$TOKEN/'$SLACK_TOKEN'/g' app.yaml; fi
+  - if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    openssl aes-256-cbc -K $encrypted_db47bdfd5ec6_key -iv $encrypted_db47bdfd5ec6_iv
+    -in appengine.json.enc -out appengine.json -d; sed -i 's/$TOKEN/'$SLACK_TOKEN'/g'
+    app.yaml; fi
 deploy:
   provider: gae
   keyfile: appengine.json
-  project: womenwhogo-site
+  project: wwg-site
   skip_cleanup: true
   on: master
 notifications:
